@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-15T16:21:13Z",
+  "timestamp" : "2022-05-16T01:14:18Z",
   "count_outdated" : 263,
   "uniques_outdated" : 141,
-  "count" : 299,
+  "count" : 300,
   "uniques" : 164,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-05-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
