@@ -1,5 +1,5 @@
 {
-  "count": 36,
+  "count": 37,
   "uniques": 13,
   "clones": [
     {
@@ -59,7 +59,7 @@
     },
     {
       "timestamp": "2022-05-15T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
