@@ -1,3 +1,10 @@
+2022-05-16T01:14:18Z:
+* notice: last 14d: all unq: 37 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 263 141 / 299 164
+* notice: next accum: outdated-all outdated-unq / all unq: 263 141 / 300 164
+* notice: prev json diff / prev day diff: unq all: +0 +1 -0 -0 / +0 +1 -0 -0
+* notice: changed dates: [2022-05-15]
+
 2022-05-15T16:21:13Z:
 * notice: last 14d: all unq: 36 13
 * notice: prev accum: outdated-all outdated-unq / all unq: 263 141 / 298 163
